--- a/automation/ring_intercom/ring_to_open.yaml
+++ b/automation/ring_intercom/ring_to_open.yaml
@@ -9,7 +9,7 @@ blueprint:
     4) Optionally, a special trigger (e.g. phone battery low while not at home) can enable Ring-to-Open.
 
   domain: automation
-  source_url: "https://github.com/<YOUR_GITHUB_USER>/<YOUR_REPO>/blob/main/automation/ring_intercom/ring_to_open.yaml"
+  source_url: "https://github.com/madsbergstroem/HA-Blueprint-Ring-to-open/blob/main/automation/ring_intercom/ring_to_open.yaml"
 
   input:
     ding_sensor:
@@ -69,7 +69,7 @@ blueprint:
 
     phone_battery_sensor:
       name: Phone battery sensor (optional)
-      description: Numeric sensor (0–100). Example: sensor.michel_phone_battery_level
+      description: "Numeric sensor (0–100). Example: sensor.michel_phone_battery_level"
       default: ""
       selector:
         entity:
